compiler/testData/diagnostics/tests/sealed/interfaces/sealedInterfacesDisabled.kt
// ISSUE: KT-20423
// !LANGUAGE: -SealedInterfaces
// !DIAGNOSTICS: -UNUSED_VARIABLE

<!WRONG_MODIFIER_TARGET!>sealed<!> interface Base
